[package]
name = "nifpga-fifo-to-zmq"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mattia Donato"]
about = "NI FPGA FIFOs reader to ZMQ PULL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "cargo"] }
fehler = "1.0.0"
sysinfo = "0.29.0"
crossbeam = "0.8"

nifpga-sys = { git = "https://github.com/mattia-donato/nifpga-win-rs"} # "PLEASE USE THE VERSION ON THE "
nifpga-type-macro = { git = "https://github.com/mattia-donato/nifpga-win-rs"} # "0.1.3"
nifpga = { git = "https://github.com/mattia-donato/nifpga-win-rs"} # "0.1.3"

#nifpga-sys = { path = "../nifpga-rs-dbtaylor/nifpga-sys" } # "0.1.3"
#nifpga-type-macro = { path = "../nifpga-rs-dbtaylor/nifpga-type-macro" } # "0.1.3"
#nifpga = { path = "../nifpga-rs-dbtaylor/nifpga" } # "0.1.3"
zmq = "0.10.0"

[build-dependencies]
cc = "1.0.54"
